--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
-
+    <script src="js/player.js"></script>
+    <script src="js/form.js"></script>
+    <script src="js/game.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
 
 
     <script>
-      // Your web app's Firebase configuration
-      //add here
-      // Initialize Firebase
+      var firebaseConfig = {
+    apiKey: "AIzaSyAVyHzurGxefw6_DMGkRzP3-UQ78wKIBpY",
+    authDomain: "multiplayer-car-game-21f6f.firebaseapp.com",
+    databaseURL: "https://multiplayer-car-game-21f6f.firebaseio.com",
+    projectId: "multiplayer-car-game-21f6f",
+    storageBucket: "multiplayer-car-game-21f6f.appspot.com",
+    messagingSenderId: "711469169839",
+    appId: "1:711469169839:web:23c5218c05b1399947285a"
+  };
       firebase.initializeApp(firebaseConfig);
     </script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
